# SlideGen

./: .gitignore  Dockerfile  README.md  config.py  generar_slides.py  index.html  main.py  nombres.txt  package.json  plantilla.pptx  pyproject.toml  resultado_con_nombres.pptx  run.py
static/: app.js  output.css  styles.css
templates/: base.html  index.html
templates/components/: footer_sections.html  hero.html  navbar.html  process_button.html  recipient_section.html  upload_section.html
