[project]
name = "slidegen"
version = "0.1.0"
description = "Generador de presentaciones PPTX personalizadas en batch"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=1.0.2",
    "jinja2>=3.1.6",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pillow>=12.1.0",
    "lxml>=6.0.2",
    "xlsxwriter>=3.2.9",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "python-multipart>=0.0.22",
]

[tool.uv]
managed = true
